[package]
name = "arweave_bundle_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
bundlr-sdk = { git = "https://github.com/Salka1988/bundlr-sdk", branch = "salka1988/add_data_item"}
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
thiserror = "1.0.63"
clap = { version = "4.1", features = ["derive"] }
